[package]
name = "actix-lua"
version = "0.2.0"
authors = ["Poga Po <poga.bahamut@gmail.com>"]
description = "Define Actix actor with Lua"
repository = "https://github.com/poga/actix-lua"
readme = "./README.md"
keywords = ["actix", "actor", "lua"]
categories = ["network-programming", "asynchronous"]
license = "MIT"
exclude = [".gitignore"]


[lib]
name = "actix_lua"
path = "src/lib.rs"

[dependencies]
actix = "0.7"
futures = "0.1"
tokio = "0.1"
rlua = "0.14"
uuid = { version = "0.6", features = ["v4"] }
rust-embed = "3.0"

[dev-dependencies]
futures-timer = "0.1"