[package]
name = "actix-lua"
version = "0.7.1-alpha.0"
authors = ["Poga Po <poga.bahamut@gmail.com>"]
description = "A safe scripting environment for actix with the Lua Programming Language"
repository = "https://github.com/poga/actix-lua"
readme = "./README.md"
keywords = ["actix", "actor", "lua"]
categories = ["network-programming", "asynchronous"]
license = "MIT"
exclude = [".gitignore"]
edition = '2018'


[lib]
name = "actix_lua"
path = "src/lib.rs"

[dependencies]
actix = "0.7"
futures = "0.1"
tokio = "0.1"
rlua = "0.16"
uuid = { version = "0.6", features = ["v4"] }
regex = "1"

[dev-dependencies]
futures-timer = "0.1"
